--- a/public/login.html
+++ b/public/login.html
@@ -1,11 +1,20 @@
 <html>
-
-<head>
-    <h1>Login Page</h1>
-</head>
-
-<body>
-
-</body>
-
+    <head></head>
+    <body>
+        <h1>Log In</h1>
+        <form method="POST" action="/login">
+            <input type="text" name="username" placeholder="Your Username" maxlength="30">
+            <input type="password" name="password" placeholder="Your Password" maxlength="30">
+            <input type="submit" value="Submit">
+        </form>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <b>{{message}}</b>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        <br>
+        <a href={{ url_for('signup') }}>Sign Up</a>
+    </body>
 </html>
