added minimal styling to profile page

--- a/public/profile.html
+++ b/public/profile.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-
+    <link rel="stylesheet" href="/static/react/profile.css">
 </head>
 
 <body>
@@ -10,7 +10,7 @@
     <br>
     <table>
         <tr>
-            <th>Battle History</th>
+            <p>Battle History</p>
         </tr>
         <tr>
             <th>
