added linting, unit tests, fixed login bugs

--- a/public/signup.html
+++ b/public/signup.html
@@ -9,12 +9,12 @@
                 <form method="POST" action="/signup">
                     <div>
                         <div class="user-font">Username</div>
-                        <input class="user-input" type="text" name="username" autofocus="" maxlength="30">
+                        <input class="user-input" type="text" name="username" autofocus="" min="1" maxlength="30" required>
     
                     </div>
                     <div class="signup-padding">
                         <div class="pass-font">Password</div>
-                        <input class="password-input" type="password" name="password" autofocus="" maxlength="30">
+                        <input class="password-input" type="password" name="password" autofocus="" min="1" maxlength="30" required>
     
                     </div>
                     <div class="button-padding">
