--- a/public/login.html
+++ b/public/login.html
@@ -9,12 +9,12 @@
                 <form method="POST" action="/login">
                     <div>
                         <div class="user-font">Username</div>
-                        <input class="user-input" type="text" name="username" maxlength="30">
+                        <input class="user-input" type="text" name="username" min="1"  maxlength="30" required>
 
                     </div>
                     <div class="login-padding">
                         <div class="pass-font">Password</div>
-                        <input class="password-input" type="password" name="password" maxlength="30">
+                        <input class="password-input" type="password" name="password" min="1"  maxlength="30" required>
 
                     </div>
                     <div class="button-padding">
