added logout button

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
 
 <body>
   <a href="{{url}}">Profile</a>
+  <form method="POST" action="/logout">
+    <input id="submit" type="submit" value="Logout">
+ </form>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
