--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="Navbar">
     <a href="/">HearthSensei</a>
-    <a href="/profile">Profile</a>
+    <a href="/Profile">Profile</a>
     <a href="/battle">Battle</a>
     <form method="POST" action="/logout">
       <input id="submit" type="submit" value="Logout">
