--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,12 @@
 </head>
 
 <body>
-  <div class="Navbar">
+  <div class="Navbar header">
     <a href="/">HearthSensei</a>
     <a href="/Profile">Profile</a>
     <a href="/battle">Battle</a>
     <form method="POST" action="/logout">
-      <input id="submit" type="submit" value="Logout">
+      <input class="submit-button" id="submit" type="submit" value="Logout">
     </form>
   </div>
   <noscript>You need to enable JavaScript to run this app.</noscript>
