added viewable profiles of the other users

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
   <div class="Navbar">
     <a href="/">HearthSensei</a>
     <a href="/Profile">Profile</a>
+    <a href="/Users">Users</a>
     <a href="/battle">Battle</a>
     <form method="POST" action="/logout">
       <input id="submit" type="submit" value="Logout">
