--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="Navbar header">
-    <a href="/"><img src="%PUBLIC_URL%/hearth-sensei_logo.png" height="60"></a>
+    <a href="/" class="Logo"><img src="%PUBLIC_URL%/hearth-sensei_logo.png" height="60"></a>
     <div class="NavTabs">
       <ul class="NavLinks">
         <li><a href="/Profile">Profile</a></li>
