--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     </div>
     {% if current_user.is_authenticated %}
     <form method="POST" action="/logout">
-      <input class="submit-button" id="submit" type="submit" value="Logout">
+      <input class="logout-button" id="submit" type="submit" value="Logout">
     </form>
     {% else %}
     <form action="/login">
